Added the latest paper without full Analysis part and Conclusion

--- a/Paper/Sections/1Introduction.tex
+++ b/Paper/Sections/1Introduction.tex
@@ -1,14 +1,24 @@
 \section{Introduction}
 \label{sec:introduction}
-Biological sequence alignment search algorithms are widely used in Bioinformatics and Computational biology(BCB), where the match of DNA sequences is searched \cite{kasap2008design}. The main reason in using such search algorithms is to identify the degree of similarity of a newly discovered biological sequence with already known sequences \cite{kasap2008design}. By exploiting those algorithms it would be possible to determine early disease diagnosis, where biological information of a newly discovered sequence is obtained by matching it with the most similar disease gene in the database \cite{guo2012systolic}. However, sequence alignment algorithms require powerful computational units to operate \cite{datta2009}. For this reason, using desktop computers to perform search operation is usually inefficient and unacceptable in terms of computational power and speed \cite{masato2016}.  
+
+\quad Biological sequence alignment search algorithms are widely used in Bioinformatics and Computational biology(BCB), where the match of DNA sequences is searched \cite{kasap2008design}. The main reason in using such search algorithms is to identify the degree of similarity of a newly discovered biological sequence with already known sequences \cite{kasap2008design}.For example, by exploiting those algorithms it would be possible to determine early disease diagnosis: biological information of a newly discovered sequence can be obtained by matching it with the most similar disease gene in the database \cite{guo2012systolic}. However, sequence alignment algorithms require powerful computational units to operate \cite{datta2009}. For this reason, using desktop computers to perform search operation is usually inefficient and unacceptable in terms of computational power and speed \cite{masato2016}.  
 \\
 
-The usage of Field Programmable Gate Arrays(FPGAs) has been recently proposed as an effective solution to meet the hardware performance requirements \cite{kasap2008design}. There are several reasons behind the success of FPGA in such a computaional intensive operations. First of all, the flexibility of FPGA architecture enables to allocate highly efficient operations in the narrow bit-width data to define the long DNA sequences, in contrast to fixed register size of traditional processors \cite{cug2007}. Secondly, power consumption is significantly lower in FPGAs in contrast to CPUs, with the difference of approximately 4 times \cite{cug2007}. Moreover, reprogrammability of FPGAs to fit the certain accelerated algorithm also reduces the power consumption. Another advantage of using FPGAs instead of other acceleration techniques is its being widely exploited and developed for several years, as well as its availability in the market \cite{cug2007}. 
+The usage of Field Programmable Gate Arrays(FPGAs) has been recently proposed as an effective solution to meet the hardware performance requirements \cite{kasap2008design}. There are several reasons behind the success of FPGA in such a computational intensive operations. First of all, the flexibility of FPGA architecture enables to allocate highly efficient operations in the narrow bit-width data to define the long DNA sequences, in contrast to fixed register size of traditional processors \cite{cug2007}. Secondly, power consumption is significantly lower in FPGAs in contrast to CPUs, with the difference of approximately 4 times \cite{cug2007}. Moreover, reprogrammability of FPGAs to fit the certain accelerated algorithm also reduces the power consumption. Another advantage of using FPGAs instead of other acceleration techniques is its being widely exploited and developed for several years, as well as its availability in the market \cite{cug2007}. 
 \\
 
-The efficiency of search algorithm is essential, and probably even more important than the hardware it is run on. There are various biological sequence alignment techniques developed over the past decades\cite{mohd2013}. Basic Local Alignment Search Tool(BLAST) is one of the widely used heuristic methodologies, which delivers the best local alignment for even large size of data sets. Due to its heuristic nature, BLAST is much faster than dynamic programming algorithms such as Needleman-Wunsch and Smith-Waterman algorithms \cite{wien2011blastp}. Although, BLAST has been proved to meet the performance and search sensitivity criteria, the improvements in DNA sequencing technologies rises new challenges for BLAST. Statistics imply that the number of genomic sequences is doubling almost every year, and as a consequence, even algorithms like BLAST cannot remain efficient to meet new requirements \cite{wien2011blastp}. 
+The efficiency of search algorithm is essential, and probably is even more important than the hardware it is run on. There are various biological sequence alignment techniques developed over the past decades\cite{mohd2013}. Basic Local Alignment Search Tool(BLAST) is one of the widely used heuristic methodologies, which delivers the best local alignment for large size of data sets. Due to its heuristic nature, BLAST is much faster than dynamic programming algorithms such as Needleman-Wunsch and Smith-Waterman algorithms \cite{wien2011blastp}. Although, BLAST has been proved to meet the performance and search sensitivity criteria, the improvements in DNA sequencing technologies rises new challenges for BLAST. Statistics imply that the number of genomic sequences is doubling almost every year, and as a consequence, even algorithms like BLAST cannot remain efficient to meet new requirements \cite{wien2011blastp}. 
 \\
 
-\todo[inline]{add what this paper proposes}
+We propose the architecture of BLAST algorithm run on FPGA, where the DNA search alignment is improved by parallel processing. Indeed, when the match between query segments and a database is searched, the parallel search for those matches decreases the time of the process. In contrast to some other existing architectures, which are provided in \textit{Section.2}, in our proposed architecture a query is stored once in register and search is performed in parallel. Once all the hits between the query and the portion of database are found the expansion process begins immediately. Expansions will be done in series, one after one expanding from both sides of each found match. After the expansion process is completed, the corresponding value of similarity is recorded for every match. Then, the search for match and expansion processes continues until the maximum possible similarity is found or the whole database is processed. Finally, at the end of the computing, the highest five scores of similarity are provided to extend the flexibility with the obtained results. 
+\\
+
+In this paper, we present the open source of HBlast architecture, which is essentially the hardware implementation of the BLAST algorithm, which offers the better performance in DNA search alignment. The rest of this paper is organized as follows: \textit{Section 2} discussed related work, \textit{}\textit{Section 3} explains how the BLAST algorithm works, \textit{Section 4} presents the proposed architecture and the implementation details, \textit{Section 5} provides the discussion of the architecture and the results of performance analysis, and \textit{Section 6} concludes the paper.
+
+ 
+ 
+
+ 
+ 
 
 
