--- a/Paper/Sections/ConclusionAndFutureWork.tex
+++ b/Paper/Sections/ConclusionAndFutureWork.tex
@@ -1,4 +1,8 @@
 \section{Conclusion and Future Work}
-\label{sec:concle}
+\label{sec:concl}
+
+
+ - query length is limited by 512 bits
+ - expansion waits for hit, hit waits for expansions expansions are not parallel
 
 In paper \cite{vipin2019}
