--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -15,32 +15,27 @@
 
 \begin{document}
 %
-\title{Contribution Title\thanks{Supported by organization x.}}
+\title{Contribution Title}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{First Author\inst{1}\orcidID{0000-1111-2222-3333} \and
-Second Author\inst{2,3}\orcidID{1111-2222-3333-4444} \and
-Third Author\inst{3}\orcidID{2222--3333-4444-5555}}
+\author{Vipin Kizheppatt\inst{1}\orcidID{0000-1111-2222-3333} \and
+Marzhan Bekbolat\inst{1}  \and
+Sabina Kairatova\inst{1} \and Ayan Shymyrbay\inst{1} }
 %
-\authorrunning{F. Author et al.}
+\authorrunning{V. Kizheppatt et al.}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
-\institute{Princeton University, Princeton NJ 08544, USA \and
-Springer Heidelberg, Tiergartenstr. 17, 69121 Heidelberg, Germany
-\email{lncs@springer.com}\\
-\url{http://www.springer.com/gp/computer-science/lncs} \and
-ABC Institute, Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
-\email{\{abc,lncs\}@uni-heidelberg.de}}
+\institute{Nazarbayev University, Astana 010000, Kazakhstan \\
+\email{vipin.kizheppatt@nu.edu.kz } \email{marzhan.bekbolat@nu.edu.kz } \email{sabina.kairatova@nu.edu.kz} \email{ayan.shymyrbay@nu.edu.kz }\\
+}
 %
 \maketitle              % typeset the header of the contribution
 %
 \input Sections/0abstract
-
-
 \input Sections/1Introduction
 \input Sections/Background_and_ReatedWork
 \input Sections/BlastAlgorithm
