--- a/Paper/Sections/Background_and_ReatedWork.tex
+++ b/Paper/Sections/Background_and_ReatedWork.tex
@@ -1,7 +1,7 @@
 \section{Background and Related Work}
 \label{sec:background}
 
-FPGAs are applied in sequence comparison in Large Sequence Databanks for the reason that they significantly improve performance due to parallel architecture. There are number of proposed and applied implementations of BLAST algorithm on FPGA in order to address the issue of biological sequence alignment \cite{oliver2005hyper}. The following examples are the proposed hardware implementations of BLAST algorithm: Mercury BLASTn \cite{buhler2007mercury}, Mercury BLASTp \cite{harris2007banded}, Tree-BLAST \cite{herbordt2006single}, RC-BLAST \cite{datta2009rc}, FPGA/FLASH Accelerator \cite{lavenier2007reconfigurable}, Multiengine BLASTn Accelerator \cite{sotiriades2007design}. 
+\quad FPGAs are applied in sequence comparison in Large Sequence Databanks for the reason that they significantly improve performance due to parallel architecture. There are number of proposed and applied implementations of BLAST algorithm on FPGA in order to address the issue of biological sequence alignment \cite{oliver2005hyper}. The following examples are the proposed hardware implementations of BLAST algorithm: Mercury BLASTn \cite{buhler2007mercury}, Mercury BLASTp \cite{harris2007banded}, Tree-BLAST \cite{herbordt2006single}, RC-BLAST \cite{datta2009}, FPGA/FLASH Accelerator \cite{lavenier2007reconfigurable} and Multiengine BLASTn Accelerator \cite{sotiriades2007design}. 
 \\
 
 The architectures mentioned above are based on the Word Position Record-Based Search (WPRBS) method \cite{guo2012systolic}, which stores words of query sequence in a constructed storage table and compares the subject sequence with storage table to detect the match. The strategy is widely applied, however, performance and searching capacity limitations are still extant. The reason is that during one clock cycle only one word can be searched, and thus more than one hit per clock cycle cannot be detected. Timing issue is also caused by shortage in WPRBS searching capacity due to limited number of memory ports in FPGAs. Examples of such architecture are Mercury BLASTn \cite{buhler2007mercury} and Mitrion \cite{guo2012systolic}. In these two systems, storage tables are stored in the external memory SRAM that is attached to the FPGA, since the tables storing the words of long query sequences will require vast amount of space in internal memory RAM. Searching is performed by comparing one subject sequence from database to every word in the storage table simultaneously during one clock cycle. Apparently, performance of the system will be low: accessing external memory SRAM for getting subject sequence from database every time consumes significant amount of time.    
