Updating to IEEE format

--- a/Paper/Sections/0abstract.tex
+++ b/Paper/Sections/0abstract.tex
@@ -1,6 +1,8 @@
 \begin{abstract}
 
-A numerous FPGA-based designs were presented for accelerating similarity search algorithms in Bioinformatics. Those designs were built according to many algorithms, however, the BLAST algorithm is the most widely used algorithm transferred to reconfigurable hardware. This paper presents the design and implementation of the FPGA-based core for BLAST algorithm with parallel search for match between sequences. This results in a high performance and effective FPGA implementation, which outperforms the equivalent software implementation. The new architecture and detailed performance results are presented in this paper.
-
-\keywords{FPGA  \and BLAST algorithm \and Parallel architecture \and Sequence alignment.}
+A numerous FPGA-based designs were presented for accelerating similarity search algorithms in Bioinformatics. Those design were built according to many algorithms, however, the BLAST algorithm is the most widely used algorithm transferred to reconfigurable hardware. This paper presents the design and implementation of the FPGA-based core for BLAST algorithm with parallel search for match between sequences. This results in a high performance and effective FPGA implementation, which outperforms the equivalent software implementation. The new architecture and detailed performance results are presented in this paper.
 \end{abstract}
+
+\begin{IEEEkeywords}
+FPGA, BLAST algorithm, Parallel architecture, Sequence alignment.
+\end{IEEEkeywords}
