--- a/Paper/Sections/BlastAlgorithm.tex
+++ b/Paper/Sections/BlastAlgorithm.tex
@@ -10,7 +10,7 @@
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=0.85\textwidth]{Figures/Algorithm1.pdf}
+\includegraphics[width=\columnwidth]{Figures/Algorithm1.pdf}
 \caption{Example of BLAST Algorithm's First Step: Pre-Processing of the Query.} \label{fig:step1}
 \end{figure}
 
@@ -29,7 +29,7 @@ The substring ACG will be the first w-mer and CGT is the second and so on.
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=0.8\textwidth]{Figures/Algorithm2.pdf}
+\includegraphics[width=\columnwidth]{Figures/Algorithm2.pdf}
 \caption{Example of BLAST Algorithm's Second Step: Search for Exact Match/Hit.} \label{fig:step2}
 \end{figure}
 
@@ -41,7 +41,7 @@ The substring ACG will be the first w-mer and CGT is the second and so on.
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{Figures/Algorithm3.pdf}
+\includegraphics[width=\columnwidth]{Figures/Algorithm3.pdf}
 \caption{Example of BLAST Algorithm's Third Step: Expansion of Comparison around Hits} \label{fig:step3}
 \end{figure}
 
