--- a/Paper/Sections/ProposedArchitecture.tex
+++ b/Paper/Sections/ProposedArchitecture.tex
@@ -5,7 +5,7 @@
    
 \begin{figure}[h!]
 \centering
-\includegraphics[width=1.2\textwidth]{Figures/BlastMachine.pdf}
+\includegraphics[width=\columnwidth]{Figures/BlastMachine.pdf}
 \caption{Proposed Architecture / HBlast machine.} \label{fig:blastArch}
 \end{figure}
 
@@ -25,7 +25,7 @@ At the same time the block \textit{High Score Calculator} will calculate the mat
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=0.4\textwidth]{Figures/hitFSM.pdf}
+\includegraphics[width=\columnwidth]{Figures/hitFSM.pdf}
 \caption{FSM diagram for module Hit} \label{fig:hitFSM}
 \end{figure}
 
@@ -48,7 +48,7 @@ The initial value of HSP is 55 (obtained from 11*5). If next 2 bits are matched 
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=0.7\textwidth]{Figures/expandFSM.pdf}
+\includegraphics[width=\columnwidth]{Figures/expandFSM.pdf}
 \caption{FSM diagram for module Expansion} \label{fig:expandFSM}
 \end{figure}
        
@@ -63,7 +63,7 @@ The initial value of HSP is 55 (obtained from 11*5). If next 2 bits are matched 
 
 \begin{figure}
 \centering
-\includegraphics[width=0.8\textwidth]{Figures/FSM_Mem_New.pdf}
+\includegraphics[width=\columnwidth]{Figures/FSM_Mem_New.pdf}
 \caption{FSM diagram for Memory Interface} \label{fig:MemInt}
 \end{figure}
 
@@ -80,6 +80,6 @@ The initial value of HSP is 55 (obtained from 11*5). If next 2 bits are matched 
 
 \begin{figure}
 \centering
-\includegraphics[width=0.8\textwidth]{Figures/bridgeFSM.pdf}
+\includegraphics[width=\columnwidth]{Figures/bridgeFSM.pdf}
 \caption{FSM diagram for bridge} \label{fig:bridge}
 \end{figure}
