--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -2,7 +2,7 @@
 % LLNCS macro package for Springer Computer Science proceedings;
 % Version 2.20 of 2017/10/04
 %
-\documentclass[runningheads]{llncs}
+\documentclass[10pt,conference,letterpaper]{IEEEtran}
 %
 \usepackage{graphicx}
 \usepackage{todonotes}
@@ -15,22 +15,12 @@
 
 \begin{document}
 %
-\title{Contribution Title}
-%
-%\titlerunning{Abbreviated paper title}
-% If the paper title is too long for the running head, you can set
-% an abbreviated paper title here
-%
-\author{Vipin Kizheppatt\inst{1}\orcidID{0000-1111-2222-3333} \and
-Marzhan Bekbolat\inst{1}  \and
-Sabina Kairatova\inst{1} \and Ayan Shymyrbay\inst{1} }
-%
-\authorrunning{V. Kizheppatt et al.}
-% First names are abbreviated in the running head.
-% If there are more than two authors, 'et al.' is used.
-%
-\institute{Nazarbayev University, Astana 010000, Kazakhstan \\
-\email{vipin.kizheppatt@nu.edu.kz } \email{marzhan.bekbolat@nu.edu.kz } \email{sabina.kairatova@nu.edu.kz} \email{ayan.shymyrbay@nu.edu.kz }\\
+\title{HBLast: An open-source FPGA library for DNA sequencing acceleration}
+\author{\IEEEauthorblockN{Marzhan Bekbolat, Sabina Kairatova, Ayan Shymyrbay and Kizheppatt Vipin}
+\IEEEauthorblockA{\textit{Department of Electrical and Computer Engineering} \\
+\textit{Nazarbayev University}\\
+Astana, Kazakhstan \\
+\{marzhan.bekbolat,sabina.kairatova,ayan.shymyrbay,vipin.kizheppatt\}@nu.edu.kz}
 }
 %
 \maketitle              % typeset the header of the contribution
@@ -44,6 +34,6 @@ Sabina Kairatova\inst{1} \and Ayan Shymyrbay\inst{1} }
 \input Sections/ConclusionAndFutureWork
 
 
-\bibliographystyle{splncs04}
+\bibliographystyle{IEEEtran}
 \bibliography{reference}
 \end{document}
