--- a/Paper/reference.bib
+++ b/Paper/reference.bib
@@ -1,141 +1,166 @@
+% This file was created with JabRef 2.10.
 % Encoding: UTF-8
 
-@Article{guo2012systolic,
-  author    = {Guo, Xinyu and Wang, Hong and Devabhaktuni, Vijay},
-  title     = {A systolic array-based FPGA parallel architecture for the BLAST algorithm},
-  journal   = {ISRN bioinformatics},
-  year      = {2012},
-  volume    = {2012},
-  publisher = {Hindawi Publishing Corporation},
-}
-@Article{kasap2008design,
-  author  = {Kasap, Server and Benkrid, Khaled and Liu, Ying},
-  title   = {Design and Implementation of an FPGA-based Core for Gapped BLAST Sequence Alignment with the Two-Hit Method.},
-  journal = {Engineering Letters},
-  year    = {2008},
-  volume  = {16},
-  number  = {3},
+
+@Article{cug2007,
+  Title                    = {Accelerating NCBI BLAST},
+  Author                   = {Abelsson, Henrik and Sandberg, Goran and Mohl, Stefan},
+  Journal                  = {Cray User Group},
+  Year                     = {2007}
 }
 
-@InProceedings{sarkar2010hardware,
-  author       = {Sarkar, Souradip and Majumder, Turbo and Kalyanaraman, Ananth and Pande, Partha Pratim},
-  title        = {Hardware accelerators for biocomputing: A survey},
-  booktitle    = {Proceedings of IEEE International Symposium on Circuits and Systems (ISCAS)},
-  year         = {2010},
-  pages        = {3789--3792},
-  organization = {IEEE},
+@Electronic{aws2018,
+  Title                    = {AWS EC2 FPGA Hardware and Software Development Kit},
+  Author                   = {Amazon},
+  Url                      = {https://github.com/aws/aws-fpga},
+  Year                     = {2018},
+
+  Owner                    = {vipin},
+  Timestamp                = {2019.02.04}
 }
 
-@InProceedings{oliver2005hyper,
-  author       = {Oliver, Tim and Schmidt, Bertil and Maskell, Douglas},
-  title        = {Hyper customized processors for bio-sequence database scanning on {FPGAs}},
-  booktitle    = {Proceedings of the {ACM/SIGDA} international symposium on Field-programmable gate arrays},
-  year         = {2005},
-  pages        = {229--237},
-  organization = {ACM},
-}
 @Article{buhler2007mercury,
-  author  = {Buhler, Jeremy D and Lancaster, Joseph M and Jacob, Arpith C and Chamberlain, Roger D and others},
-  title   = {Mercury BLASTN: Faster DNA sequence comparison using a streaming hardware architecture},
-  journal = {Proc. of Reconfigurable Systems Summer Institute},
-  year    = {2007},
-}
-@Article{lavenier2007reconfigurable,
-  author    = {Lavenier, Dominique and Georges, Gilles and Liu, Xinchun},
-  title     = {A reconfigurable index FLASH memory tailored to seed-based genomic sequence comparison algorithms},
-  journal   = {The Journal of VLSI Signal Processing Systems for Signal, Image, and Video Technology},
-  year      = {2007},
-  volume    = {48},
-  number    = {3},
-  pages     = {255--269},
-  publisher = {Springer},
-}
-@InProceedings{harris2007banded,
-  author       = {Harris, Brandon and Jacob, Arpith C and Lancaster, Joseph M and Buhler, Jeremy and Chamberlain, Roger D},
-  title        = {A banded Smith-Waterman FPGA accelerator for Mercury BLASTP},
-  booktitle    = {Field Programmable Logic and Applications, 2007. FPL 2007. International Conference on},
-  year         = {2007},
-  pages        = {765--769},
-  organization = {IEEE},
-}
-@InProceedings{herbordt2006single,
-  author       = {Herbordt, Martin C and Model, Josh and Gu, Yongfeng and Sukhwani, Bharat and VanCourt, Tom},
-  title        = {Single pass, BLAST-like, approximate string matching on FPGAs},
-  booktitle    = {Field-Programmable Custom Computing Machines, 2006. FCCM'06. 14th Annual IEEE Symposium on},
-  year         = {2006},
-  pages        = {217--226},
-  organization = {IEEE},
+  Title                    = {Mercury BLASTN: Faster DNA sequence comparison using a streaming hardware architecture},
+  Author                   = {Buhler, Jeremy D and Lancaster, Joseph M and Jacob, Arpith C and Chamberlain, Roger D and others},
+  Journal                  = {Proc. of Reconfigurable Systems Summer Institute},
+  Year                     = {2007}
 }
 
 @InProceedings{datta2009,
-  author       = {Datta, Siddhartha and Beeraka, Parag and Sass, Ron},
-  title        = {RC-BLASTn: Implementation and evaluation of the BLASTn scan function},
-  booktitle    = {Field Programmable Custom Computing Machines, 2009. FCCM'09. 17th IEEE Symposium on},
-  year         = {2009},
-  pages        = {88--95},
-  organization = {IEEE},
+  Title                    = {RC-BLASTn: Implementation and evaluation of the BLASTn scan function},
+  Author                   = {Datta, Siddhartha and Beeraka, Parag and Sass, Ron},
+  Booktitle                = {Field Programmable Custom Computing Machines, 2009. FCCM'09. 17th IEEE Symposium on},
+  Year                     = {2009},
+  Organization             = {IEEE},
+  Pages                    = {88--95}
 }
-@InProceedings{sotiriades2007design,
-  author       = {Sotiriades, Euripides and Dollas, Apostolos},
-  title        = {Design space exploration for the BLAST algorithm implementation},
-  booktitle    = {Field-Programmable Custom Computing Machines, 2007. FCCM 2007. 15th Annual IEEE Symposium on},
-  year         = {2007},
-  pages        = {323--326},
-  organization = {IEEE},
-}
+
 @Article{gonnet1992exhaustive,
-  author    = {Gonnet, Gaston H and Cohen, Mark A and Benner, Steven A},
-  title     = {Exhaustive matching of the entire protein sequence database},
-  journal   = {Science},
-  year      = {1992},
-  volume    = {256},
-  number    = {5062},
-  pages     = {1443--1445},
-  publisher = {American Association for the Advancement of Science},
+  Title                    = {Exhaustive matching of the entire protein sequence database},
+  Author                   = {Gonnet, Gaston H and Cohen, Mark A and Benner, Steven A},
+  Journal                  = {Science},
+  Year                     = {1992},
+  Number                   = {5062},
+  Pages                    = {1443--1445},
+  Volume                   = {256},
+
+  Publisher                = {American Association for the Advancement of Science}
 }
+
+@Article{guo2012systolic,
+  Title                    = {A systolic array-based FPGA parallel architecture for the BLAST algorithm},
+  Author                   = {Guo, Xinyu and Wang, Hong and Devabhaktuni, Vijay},
+  Journal                  = {ISRN bioinformatics},
+  Year                     = {2012},
+  Volume                   = {2012},
+
+  Publisher                = {Hindawi Publishing Corporation}
+}
+
+@InProceedings{harris2007banded,
+  Title                    = {A banded Smith-Waterman FPGA accelerator for Mercury BLASTP},
+  Author                   = {Harris, Brandon and Jacob, Arpith C and Lancaster, Joseph M and Buhler, Jeremy and Chamberlain, Roger D},
+  Booktitle                = {Field Programmable Logic and Applications, 2007. FPL 2007. International Conference on},
+  Year                     = {2007},
+  Organization             = {IEEE},
+  Pages                    = {765--769}
+}
+
+@InProceedings{herbordt2006single,
+  Title                    = {Single pass, BLAST-like, approximate string matching on FPGAs},
+  Author                   = {Herbordt, Martin C and Model, Josh and Gu, Yongfeng and Sukhwani, Bharat and VanCourt, Tom},
+  Booktitle                = {Field-Programmable Custom Computing Machines, 2006. FCCM'06. 14th Annual IEEE Symposium on},
+  Year                     = {2006},
+  Organization             = {IEEE},
+  Pages                    = {217--226}
+}
+
 @InProceedings{hoang1993searching,
-  author       = {Hoang, Dzung T},
-  title        = {Searching genetic databases on Splash 2},
-  booktitle    = {FPGAs for Custom Computing Machines, 1993. Proceedings. IEEE Workshop on},
-  year         = {1993},
-  pages        = {185--191},
-  organization = {IEEE},
-}
-@InProceedings{yu2003smith,
-  author       = {Yu, Chi Wai and Kwong, KH and Lee, Kin-Hong and Leong, Philip Heng Wai},
-  title        = {A Smith-Waterman systolic cell},
-  booktitle    = {International Conference on Field Programmable Logic and Applications},
-  year         = {2003},
-  pages        = {375--384},
-  organization = {Springer},
+  Title                    = {Searching genetic databases on Splash 2},
+  Author                   = {Hoang, Dzung T},
+  Booktitle                = {FPGAs for Custom Computing Machines, 1993. Proceedings. IEEE Workshop on},
+  Year                     = {1993},
+  Organization             = {IEEE},
+  Pages                    = {185--191}
 }
 
-@Article{wien2011blastp,
-  author  = {Wienbrandt, Lars and Baumgart, Stefan and Bissel, Jost and Schatz, Florian and Schimmler, Manfred},
-  title   = {Massively parallel FPGA-based implementation of BLASTp with the two-hit method},
-  journal = {ELSEVIER},
-  year    = {2011},
+@Article{kasap2008design,
+  Title                    = {Design and Implementation of an FPGA-based Core for Gapped BLAST Sequence Alignment with the Two-Hit Method.},
+  Author                   = {Kasap, Server and Benkrid, Khaled and Liu, Ying},
+  Journal                  = {Engineering Letters},
+  Year                     = {2008},
+  Number                   = {3},
+  Volume                   = {16}
 }
 
-@Article{cug2007,
-  author  = {Abelsson, Henrik and Sandberg, Goran and Mohl, Stefan},
-  title   = {Accelerating NCBI BLAST},
-  journal = {Cray User Group},
-  year    = {2007},
-}
+@Article{lavenier2007reconfigurable,
+  Title                    = {A reconfigurable index FLASH memory tailored to seed-based genomic sequence comparison algorithms},
+  Author                   = {Lavenier, Dominique and Georges, Gilles and Liu, Xinchun},
+  Journal                  = {The Journal of VLSI Signal Processing Systems for Signal, Image, and Video Technology},
+  Year                     = {2007},
+  Number                   = {3},
+  Pages                    = {255--269},
+  Volume                   = {48},
 
-@Article{masato2016,
-  author  = {Yoshimi, Masato and Wu, Celimuge and Yoshinaga, Tsutomu},
-  title   = {Accelerating BLAST Computation on an FPGA-enhanced PC Cluster},
-  journal = {IEEE},
-  year    = {2016},
+  Publisher                = {Springer}
 }
 
 @MastersThesis{mohd2013,
-  author = {Mohd, Fikri Bin Che Husin},
-  title  = {Design and Implementation of FPGA-based DNA Sequence Alignmnet Accelerator},
-  school = {Universiti Tun Hussein Onn Malaysia},
-  year   = {2013},
+  Title                    = {Design and Implementation of FPGA-based DNA Sequence Alignmnet Accelerator},
+  Author                   = {Mohd, Fikri Bin Che Husin},
+  School                   = {Universiti Tun Hussein Onn Malaysia},
+  Year                     = {2013}
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@InProceedings{oliver2005hyper,
+  Title                    = {Hyper customized processors for bio-sequence database scanning on {FPGAs}},
+  Author                   = {Oliver, Tim and Schmidt, Bertil and Maskell, Douglas},
+  Booktitle                = {Proceedings of the {ACM/SIGDA} international symposium on Field-programmable gate arrays},
+  Year                     = {2005},
+  Organization             = {ACM},
+  Pages                    = {229--237}
+}
+
+@InProceedings{sarkar2010hardware,
+  Title                    = {Hardware accelerators for biocomputing: A survey},
+  Author                   = {Sarkar, Souradip and Majumder, Turbo and Kalyanaraman, Ananth and Pande, Partha Pratim},
+  Booktitle                = {Proceedings of IEEE International Symposium on Circuits and Systems (ISCAS)},
+  Year                     = {2010},
+  Organization             = {IEEE},
+  Pages                    = {3789--3792}
+}
+
+@InProceedings{sotiriades2007design,
+  Title                    = {Design space exploration for the BLAST algorithm implementation},
+  Author                   = {Sotiriades, Euripides and Dollas, Apostolos},
+  Booktitle                = {Field-Programmable Custom Computing Machines, 2007. FCCM 2007. 15th Annual IEEE Symposium on},
+  Year                     = {2007},
+  Organization             = {IEEE},
+  Pages                    = {323--326}
+}
+
+@Article{wien2011blastp,
+  Title                    = {Massively parallel FPGA-based implementation of BLASTp with the two-hit method},
+  Author                   = {Wienbrandt, Lars and Baumgart, Stefan and Bissel, Jost and Schatz, Florian and Schimmler, Manfred},
+  Journal                  = {ELSEVIER},
+  Year                     = {2011}
+}
+
+@Article{masato2016,
+  Title                    = {Accelerating BLAST Computation on an FPGA-enhanced PC Cluster},
+  Author                   = {Yoshimi, Masato and Wu, Celimuge and Yoshinaga, Tsutomu},
+  Journal                  = {IEEE},
+  Year                     = {2016}
+}
+
+@InProceedings{yu2003smith,
+  Title                    = {A Smith-Waterman systolic cell},
+  Author                   = {Yu, Chi Wai and Kwong, KH and Lee, Kin-Hong and Leong, Philip Heng Wai},
+  Booktitle                = {International Conference on Field Programmable Logic and Applications},
+  Year                     = {2003},
+  Organization             = {Springer},
+  Pages                    = {375--384}
+}
+
+@comment{jabref-meta: databaseType:bibtex;}
+
